Improve demoapp config and fix schemas tenant shutdown app bug